@@ -36,11 +36,12 @@ audiofeed.Web,Podcasts=http://podcasts.engadget.com/rss.xml
 
 # video feeds
 videofeed.Web,TED=http://feeds.feedburner.com/tedtalks_video
+videofeed.Web,The Onion=http://feeds.theonion.com/onionnewsnetwork
 
 # audio streams
 audiostream.Web,Radio=KBPS All-classical,http://www.abacast.com/media/pls/classical899/classical899-classical899-96.pls,http://allclassical.org/assets/images/img_logo_top.gif
 
 # video streams
-videostream.Web,Webcams=Monterey Bay,http://plankton.mbayaq.org:80/MontereyBay,http://media-cdn.tripadvisor.com/media/photo-s/00/18/4f/0d/view-of-monterey-bay.jpg
-videostream.Web,Webcams=Traffic camera Luxemburg,http://streaming.newmedia.lu/cita,http://www.hostelsclub.com/photos/006911-1164013223.jpg
-videostream.Web,Webcams=View of Shanghai Harbour,mms://www.onedir.com/cam3,http://media-cdn.tripadvisor.com/media/photo-s/00/1d/4b/d8/pudong-from-the-bund.jpg
+videostream.Web,TV=France 24,mms://stream1.france24.yacast.net/f24_liveen,http://www.france24.com/en/sites/france24.com.en/themes/france24/logo-fr.png
+videostream.Web,TV=BFM TV (French TV),mms://vipmms9.yacast.net/bfm_bfmtv,http://upload.wikimedia.org/wikipedia/en/6/62/BFMTV.png
+videostream.Web,Webcams=View of Shanghai Harbour,mmst://www.onedir.com/cam3,http://media-cdn.tripadvisor.com/media/photo-s/00/1d/4b/d8/pudong-from-the-bund.jpg
