@@ -23,6 +23,7 @@ import java.util.ArrayList;
 import net.pms.PMS;
 import net.pms.configuration.RendererConfiguration;
 import net.pms.dlna.DLNAMediaInfo;
+import net.pms.encoders.FFMpegWebVideo;
 import net.pms.encoders.MEncoderWebVideo;
 import net.pms.encoders.MPlayerWebAudio;
 import net.pms.encoders.MPlayerWebVideoDump;
@@ -69,7 +70,9 @@ public class WEB extends Format {
 		} else {
 			PMS r = PMS.get();
 			for (String engine : PMS.getConfiguration().getEnginesAsList(r.getRegistry())) {
-				if (engine.equals(MEncoderWebVideo.ID)) {
+				if (engine.equals(FFMpegWebVideo.ID)) {
+					a.add(FFMpegWebVideo.class);
+				} else if (engine.equals(MEncoderWebVideo.ID)) {
 					a.add(MEncoderWebVideo.class);
 				} else if (engine.equals(VideoLanVideoStreaming.ID)) {
 					a.add(VideoLanVideoStreaming.class);
@@ -78,6 +81,7 @@ public class WEB extends Format {
 				}
 			}
 		}
+
 		return a;
 	}
 
@@ -85,8 +89,9 @@ public class WEB extends Format {
 	 * {@inheritDoc}
 	 */
 	@Override
+	// TODO remove screen - it's been tried numerous times (see forum) and it doesn't work
 	public String[] getId() {
-		return new String[] { "http", "mms", "rtsp", "rtp", "udp", "screen" };
+		return new String[] { "http", "mms", "mmsh", "mmst", "rtsp", "rtp", "udp", "screen" };
 	}
 
 	@Override
